# mipt

./: .gitmodules  README.md
QE/: CMakeLists.txt  readme.md
QE/include/: QE.h  interactive.h  qe_config.h  static.h
QE/include/msg/: errors.h  msg.h
QE/include/solver/: parser.h
QE/src/: QE.c  interactive.c  main.c  static.c
QE/src/solver/: parser.c
baobab/onegin/: CMakeLists.txt  readme.md
fast/akinator/: CMakeLists.txt
fast/akinator/include/: akinator.h
fast/akinator/include/utils/: graphviz.h
fast/akinator/src/: main.c
fast/database/: CMakeLists.txt
fast/database/sandbox/: main.cpp  makefile
fast/database/src/: database.c
fast/database/tests/: run_tests.c
fast/list/: CMakeLists.txt
fast/list/include/: list.h
fast/new_processor/: assembler.cpp  circle_area.asm  cpu.cpp  cpu.h  disassembler.cpp  instructions.h  square_solve.asm  test_assembler.cpp  test_disassembler.cpp
fast/onegin/: CMakeLists.txt  main.c
fast/processor/: CMakeLists.txt  cisc.c  risc.c
fast/processor/src/: compiler.c  processor.c
fast/processor/tests/: test_executor.c
fast/processor/tests/codes/: quadratic_equation.asm
fast/stack/: CMakeLists.txt  stack1.c  stack_static.c
fast/stack/.prev/: stack_static.c
fast/stack/include/: stack.h
fast/stack/src/: stack.c
fast/stack/tests/stack_dump/: CMakeLists.txt  main.c
new_fast/diff/include/: differenciator.h
new_fast/dllist/: CMakeLists.txt  readme.md
new_fast/dllist/include/: dllist.h
new_fast/dllist/src/: dllist.c
new_fast/dllist/tests/: CMakeLists.txt  test_is_empty.c  test_push_pop.c  test_runner.c
new_fast/processor/: CMakeLists.txt
new_fast/processor/cpu/include/: cpu.h
new_fast/processor/cpu/src/: cpu.c
new_fast/processor/disassembler/include/: disassembler.h
new_fast/processor/disassembler/src/: disassembler.c
new_fast/processor/include/: cpu_arch.h  instructions.h
new_fast/processor/src/: cpu_arch.c  instructions.c
new_fast/processor/tests/asm/codes/: hello_world.asm
new_fast/processor/tests/dasm/: test.c
old/baobab/onegin/include/: onegin.h
old/baobab/onegin/src/: main.c  onegin.c
old/fast/akinator/src/utils/: graphviz.c  graphviz_calls.c
old/fast/database/sandbox/: app  example.dot
old/fast/list/src/: list.c
old/fast/new_processor/: asm_example.asm  assembler.h  disassembler.cpp  disassembler.h  factorial.asm  fib.cpp  fibonachi.asm  instructions.h  test  test_assembler.cpp
old/fast/onegin/: main.c
old/fast/processor/: risc.c
old/fast/processor/docs/: adress_space.txt  instructions.asm  opcodes.txt
old/fast/processor/inc/: compiler.h  processor.h
old/fast/processor/tests/codes/: area_of_a_cyrcle.asm
old/fast/stack/: CMakeLists.txt  readme.md
old/fast/stack/src/: stack.c
old/fast/stack/tests/stack_dump/: main.c
old/new_fast/.prev/akinator/: CMakeLists.txt
old/new_fast/.prev/akinator/include/: akinator.h  bintree.h  resources.h
old/new_fast/.prev/akinator/src/: akinator.c  bintree.c  main.c  resources.c
old/new_fast/.prev/akinator/test/: database.aki
old/new_fast/akinator/: CMakeLists.txt
old/new_fast/akinator/include/: akinator.h  bintree.h  resources.h
old/new_fast/akinator/src/: akinator.c  bintree.c  main.c  resources.c
old/new_fast/diff/src/: differenciator.c
old/new_fast/dllist/: CMakeLists.txt
old/new_fast/dllist/include/: dllist.h
old/new_fast/dllist/tests/: test_memory_sizes.c  test_runner.c
old/new_fast/processor/: CMakeLists.txt  readme.md
old/new_fast/processor/cpu/include/: cpu.h
old/new_fast/processor/cpu/src/: cpu.c
old/new_fast/processor/disassembler/src/: disassembler.c
old/new_fast/processor/include/: utils.h
old/new_fast/processor/tests/asm/: CMakelists.txt
old/new_fast/processor/tests/dasm/: CMakeLists.txt  test.c
old/onegin/: CMakeLists.txt  readme.md
old/onegin/include/onegin/: config.h
old/onegin/include/util/: files.h  flags.h  sort.h  types.h
old/onegin/src/: main.c
old/onegin/src/util/: files.c
old/stack/: .dump
old/stack/examples/: CMakeLists.txt  readme.md
old/stack/examples/c/: protection.c  push_pop.c
old/stack/examples/cpp/: dump.cpp
old/stack/include/: stack.h  stack.hpp
old/stack/include/stack/: encryption.h  errors.h
old/stack/src/: stack.c  stack.cpp
old/stack/src/stack/: cache.c
onegin/: CMakeLists.txt  Untitled-1.c  onegin.txt  readme.md
onegin/asm/x86_64/Linux/: utf_8.S
onegin/asm/x86_64/Windows/: malloc.S  utf_8.S
onegin/include/: onegin.h
onegin/include/onegin/: config.h  version.h
onegin/include/types/: utf8.h
onegin/include/utf-8/: string.h
onegin/include/util/: flags.enum.h  flags.h  logs.h
onegin/native/Linux/include/: map_io.h
onegin/native/Linux/src/: map_io.c
onegin/native/Windows/include/: map_io.h
onegin/native/Windows/src/: map_io.c
onegin/src/: main.c  onegin.c
onegin/src/types/: utf8.c
onegin/src/util/: files.c  flags.c  logs.c
rebirth/dllist/src/: dllist.c
rebirth/dllist/tests/: test_create_destroy.c  test_length.c  test_push_pop.c
rebirth/onegin/: CMakeLists.txt
rebirth/stack/: CMakeLists.txt
rebirth/stack/asm/: read_write_fs.asm
rebirth/stack/autotest/: testgen.lua
rebirth/stack/include/: errors.h  stack.h  stack.hpp  system_info.h
rebirth/stack/include/stack/: protection.h
rebirth/stack/include/utils/: macro.h  system_info.h
rebirth/stack/src/: stack.c  stack.cpp  system_info.c
rebirth/stack/tests/: CMakeLists.txt  main.cpp
stack/: CMakeLists.txt
stack/examples/c/: dump.c
stack/include/: conf.h  stack.h  stack.hpp  stack_conf.h
stack/include/stack/: protection.h
stack/src/: stack.c  stack.cpp
